--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,6 +94,9 @@ flutter:
     - family: Raleway
       fonts:
         - asset: lib/assets/fonts/Raleway/Raleway-Regular.ttf
+    - family: ArrowsIcons
+      fonts:
+        - asset: assets/ArrowsIcons.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
