--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   http: ^0.13.3
   mercadopago_sdk: ^1.3.0
+  image_picker: ^0.8.4
+
 
 
   # The following adds the Cupertino Icons font to your application.
