--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   http: ^0.13.3
   mercadopago_sdk: ^1.3.0
   image_picker: ^0.8.4
+  url_launcher: ^6.0.10
+  shared_preferences: ^2.0.7
 
 
 
@@ -36,6 +38,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  image_path: "assets/logo512.png"
+  android: true
+  ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
