--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,11 +33,11 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.corbera.flutter_app2"
+        applicationId "com.CorberaApps.MoritaShop"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
+        versionCode 8
+        versionName "1.1.7"
     }
 
     buildTypes {
